--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <link rel="stylesheet" href="./css/reset.css">
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=9tRjvzFaoj1IGZM42Hg7h1GW3KRnD01f"></script>
+    <link rel="stylesheet" href="/css/reset.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
